k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  namespace: default  # Make sure the namespace matches your setup
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
     # serviceAccountName: myapp  # Ensure the correct service account is used
      containers:
      - name: todo-app
        image: docker.io/ziyadtarek99/todopy:v1  # Replace with your Docker image
        ports:
        - containerPort: 5000
